[package]
name = "duckdb_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
duckdb = { version = "0.8.1", features = ["bundled", "modern-full", "extensions-full"] }
